--- a/style.css
+++ b/style.css
@@ -26,22 +26,26 @@ body {
     line-height: 4px;
     margin-top: 2rem;
 }
+#divAdd {
+    display: flex;
+}
 #divAdd #addTask {
     padding: 8px;
+    margin: 8px;
     width: 200px;
     font-size: 16px;
-    color: rgb(218, 218, 218);
+    color: black;
     border-style: solid;
     border-width: 1px;
     border-color: rgb(218, 218, 218);
     border-radius: 4px;
 }
-#addTask ::placeholder {
+#addTask::placeholder {
     color: rgb(218, 218, 218);
 }
-#divAdd #buttonAddTask {
+#buttonAddTask {
     width: 60px;
-    margin: 16px 8px 0;
+    margin: 8px;
     font-size: 28px;
     font-weight: bolder;
     color: white;
@@ -49,10 +53,19 @@ body {
     border-style: none;
     border-radius: 4px;
 }
+#buttonAddTask:hover {
+    background: rgb(177, 185, 247);
+}
  #divList {
     color: rgb(104, 104, 104);
     display: flex;
     display: block;
+}
+#listWrapper {
+    padding: 0;
+}
+#listWrapper li {
+    list-style: none;
 }
 #listWrapper label{
     background-color: rgb(211, 222, 241);
