--- a/todo-list/style.css
+++ b/todo-list/style.css
@@ -21,7 +21,7 @@ body {
 #divWrapper {
     margin-bottom: 1rem;
 }
-#divData {
+#divDate {
     color: rgb(252, 104, 70);
     line-height: 4px;
     margin-top: 2rem;
@@ -106,9 +106,6 @@ body {
     cursor: pointer;
 }
 #divButtons button:hover {
-    /*border-style: solid;
-    border-color:  rgb(218, 218, 218);
-    border-width: 1px;*/
     background-color:  rgb(177, 185, 247);
     color: white;
 }
